--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -131,10 +131,10 @@ body {
     border: none;
     padding: 12px 16px;
     margin-top: 20px;
-    margin-bottom: 16px; /* Adicionado para separar do botão Google */
+    margin-bottom: 16px; 
     cursor: pointer;
     border-radius: 10px;
-    position: relative; /* Mantido para o efeito ::after */
+    position: relative; 
     overflow: hidden;
 }
 
