--- a/css/sobre.css
+++ b/css/sobre.css
@@ -141,7 +141,7 @@ footer {
   padding: 15px 20px;
   font-size: 14px;
   width: 100%;
-  margin-top: auto; /* Empurra para o final da página */
+  margin-top: auto;
 }
 
 @keyframes fadeIn {
